# header_pack

./: .gitignore  CMakeLists.txt  README.md  header_pack.cpp
.github/workflows/: cmake-multi-platform.yml  verification.yml
tests/: CMakeLists.txt  run_test.cmake
tests/test-binary/: arguments  expected_output  expected_output.h
tests/test-text-cpp/: arguments  expected_output
tests/test-text-cpp-big/: expected_output.h  input
